[package]
name = "print_raster"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
license = "BSD-3-Clause"
description = "A crate for processing print raster images in Rust"
keywords = ["cups", "print", "pwg", "raster", "urf"]
documentation = "https://docs.rs/print_raster"
repository = "https://github.com/ArcticLampyrid/print_raster.rs/"
authors = ["ArcticLampyrid <ArcticLampyrid@outlook.com>"]
categories = ["multimedia::images", "multimedia::encoding"]
exclude = ["tests/test_inputs/*", "tests/test_outputs/*"]

[dependencies]
futures = "0.3"
thiserror = "1"
pin-project = "1"
num_enum = "0.7"
byteorder = "1"
derive_more = { version = "1", features = ["from"] }

[dev-dependencies]
image = { version = "0.25", features = ["png"], default-features = false }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
], default-features = false }
tokio-util = { version = "0.7", features = [
    "compat",
], default-features = false }
