[package]
name = "print_raster-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
honggfuzz = "0.5"
futures = "0.3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
], default-features = false }

[dependencies.print_raster]
path = "../print_raster"

[lib]
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_compress"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_cups_v2"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_urf"
test = false
doc = false
bench = false
